--- a/selectors.html
+++ b/selectors.html
@@ -21,6 +21,13 @@
 
 	<p title="baslık1">paragraf 4</p>
 	<p title="baslık2">paragraf 5</p>
+	<section>
+		<h1 title="baslık3">Lorem ipsum dolor sit amet.</h1>
+		<p title="paragraf2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, sint obcaecati incidunt architecto ut sequi, quae, consequatur nemo blanditiis sapiente voluptatem totam tempore dolorum excepturi molestias! Sunt inventore ratione sapiente!</p>
+
+		<h1 title="baslık4">Lorem ipsum dolor sit amet.</h1>
+		<p title="paragraf3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, sint obcaecati incidunt architecto ut sequi, quae, consequatur nemo blanditiis sapiente voluptatem totam tempore dolorum excepturi molestias! Sunt inventore ratione sapiente!</p>
+	</section>
 
 </body>
 </html>
